# Home-Credit-Default-Risk

./: .gitignore  README.md  main.py  pyproject.toml
conf/: main.yaml
conf/data/: base.yaml
conf/exp/: base.yaml  simple.yaml
conf/model/params/: xgboost.yaml
dataset/: __init__.py  dataset.py
experiment/: __init__.py  experiment.py  utils.py
model/: base_model.py  gbm.py  get_model.py  utils.py
